Fix bug where chart was overlapping input before getting initialized

--- a/scss/_charts.scss
+++ b/scss/_charts.scss
@@ -1,8 +1,10 @@
 .chart-wrapper {
 	height: 30vh;
 	width: 100%;
+	visibility: visible;
     &.hidden {
         height: 0;
+        visibility: hidden;
     }
 }
 
